# uba_questionary_api

./: .gitignore  CHANGELOG.md  STRIPE.md  UPDATE.md  compose.yml  pyproject.toml
docs/: ai_questionary_db.drawio
src/: __main__.py
src/configs/: configs.py  db_connection.py
src/controllers/: admin_controller.py  ai_anatomy_controller.py  ai_biology_controller.py  auth_controller.py  question_answers_controller.py  stripe_controller.py  users_controller.py
src/helpers/: biologia_questionary_text.py  check_subtopic.py  permissions_list.py  questions_text.py
src/middleware/: check_permissions.py  jwt_middleware.py
src/models/: __init__.py  models.py
src/routers/: __init__.py  admin_router.py  ai_anatomy_router.py  ai_biology_router.py  auth_router.py  question_answers_router.py  stripe_router.py  users_router.py
src/schemas/: __init__.py  admin_schema.py  ai_anatomy_schemas.py  ai_biology_schemas.py  auth_schema.py  institutions_schema.py  profile_schemas.py  questions_answers_schema.py  questions_schemas.py  stripe_schema.py  user_feedback_schema.py  user_institution_schema.py  users_schemas.py
src/services/: admin_service.py  ai_biology_service.py  auth_service.py  email_service.py  question_answers_service.py  questions_service.py  stripe_service.py  subscription_service.py  user_institution_service.py  user_institutions_service.py  user_service.py
src/utils/: cbu_utils.py  constraints.py  dni_utils.py  (+6 more)
tests/: conftest.py  test_controllers.py  test_helpers_and_utils.py  test_infrastructure_and_permissions.py  test_routes.py  test_services.py
(+8 files in other folders)
