[project]
name = "uba-ai-auto-generate-questionary-api"
version = "1.11.2"
description = ""
authors = [
    {name = "Pedro Vieira",email = "pedro515vieira@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "api-crud-generate-libary @ git+https://github.com/pedro-vlps/api_crud_generate_libary.git",
    "openai (>=2.32.0,<3.0.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "sqlacodegen (>=4.0.3,<5.0.0)",
    "pydantic-settings (>=2.14.0,<3.0.0)",
    "cryptography (>=42.0.0,<43.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "stripe (>=15.1.0,<16.0.0)",
    "black (>=26.3.1,<27.0.0)"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
cache_dir = "tests/.pytest_cache"
addopts = "-p no:cacheprovider"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0,<9.0.0"
coverage = ">=7.13.5,<8.0.0"
taskipy = ">=1.14.1,<2.0.0"

[tool.taskipy.tasks]
test = "pytest"
coverage = "coverage run -m pytest && coverage report -m"

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
skip_empty = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
